# High_Speed_Quadrupedal_Locomotion_by_IRRL

./: .gitignore  LISENSE  readme.md
Data_Visualization_Code/: Figure2.py  Figure3.py  Figure4.py  Figure5.py
Exp_Raw_Data/: 2021-06-21-15-36-04.npy  2021-06-21-23-14-03.npy  2022-04-26-14-07-16.npy  Param-2021-06-21-12-07-06.txt  Param-2021-06-22-14-47-55.txt  Param-2021-06-22-14-53-46.txt  Param-2021-06-22-15-00-52.txt  Param-2021-06-22-15-04-15.txt  Param-2021-06-22-15-07-36.txt  Param-2021-06-22-16-48-33.txt  Param-2021-06-22-16-48-55.txt  Param-2021-06-22-16-49-18.txt  Param-2021-06-22-16-49-38.txt  Param-2021-06-22-16-50-00.txt  Param-2021-06-22-16-50-21.txt  Param-2021-06-22-22-46-32.txt  Param-2021-06-23-19-59-50.txt  animal1.xlsx  robot.xlsx  (+12 more)
IRRL/FlexibleRobotRaisimGym/: CMakeLists.txt  MANIFEST.in  compile.sh  setup.py
IRRL/FlexibleRobotRaisimGym/flex_gym/algo/ppo2/: ppo2.py
IRRL/FlexibleRobotRaisimGym/flex_gym/archi/: policies.py
IRRL/FlexibleRobotRaisimGym/flex_gym/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  VectorizedEnvironment.hpp  raisim_gym.cpp
IRRL/FlexibleRobotRaisimGym/flex_gym/env/env/BlackPanther_V55/: Environment.hpp  __init__.py  customerboard.material  visSetupCallback.hpp
IRRL/FlexibleRobotRaisimGym/flex_gym/env/env/BlackPanther_V55/urdf/: black_panther.urdf  default_cfg.yaml
IRRL/FlexibleRobotRaisimGym/flex_gym/env/env/BlackPanther_V55/urdf/meshes/bp3_dae/: BP3_ABAD_L.dae  BP3_ABAD_R.dae  BP3_UPPER_L.dae  BP3_UPPER_R.dae
IRRL/FlexibleRobotRaisimGym/flex_gym/env/visualizer/: raisimBasicImguiPanel.hpp  raisimCustomerImguiPanel.hpp
(+18 files in other folders)
